--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,13 +18,6 @@ input {
   margin-right: 10px;
 }
 
-button {
-  padding: 5px 10px;
-  background-color: #007BFF;
-  border: 16px;
-  cursor: pointer;
-}
-
 #loader {
   display: none;
   text-align: center;
@@ -38,8 +31,15 @@ button {
   margin-top: 20px;
 }
 
+.button {
+  padding: 5px 10px;
+  background-color: #007BFF;
+  border: 16px;
+  cursor: pointer;
+}
+
 .gallery-item {
-  flex: 1 0 calc(33.333% - 10px);
+  flex: calc(33.333% - 10px);
   position: relative;
 }
 
